--- a/automations/002 utility closet/doorbell_pauze_tv.yaml
+++ b/automations/002 utility closet/doorbell_pauze_tv.yaml
@@ -1,21 +1,35 @@
 #################################################################
 ## Pauze TV when doorbell is pushed
 #################################################################
-- alias         : utility_closet_doorbell_pushed_pauze_tv
-  id            : 51e691bc-6e10-4d23-996d-d44bbd7d2541
+- alias: utility_closet_doorbell_pushed_pauze_tv
+  id: 51e691bc-6e10-4d23-996d-d44bbd7d2541
   trigger:
-    platform    : state
-    entity_id   : binary_sensor.utility_closet_doorbell_button
-    to          : 'on'
-  condition:
-    - condition : state
-      entity_id : remote.roelofs_harmony_hub
-      state     : 'on'
-    - "{{ is_state_attr('remote.roelofs_harmony_hub', 'current_activity', 'Tv kijken') }}"
+    platform: state
+    entity_id: binary_sensor.deurbel_ringing_sensor
+    to: "on"
+
   action:
-    - service   : remote.send_command
-      data:
-        entity_id: remote.roelofs_harmony_hub
-        device  : 72059194
-        command:
-          - Pause
+    - choose:
+        - alias: "Activity is TV kijken (on an Android set-top box)"
+          conditions:
+            condition: state
+            entity_id: select.roelofs_harmony_hub_activities
+            state: "Tv kijken"
+          sequence:
+            alias: "Harmony remote sends Pause command"
+            service: remote.send_command
+            data:
+              entity_id: remote.roelofs_harmony_hub
+              device: 72059194
+              command:
+                - Pause
+
+        - alias: "Activity is Chromecast"
+          conditions:
+            condition: state
+            entity_id: select.roelofs_harmony_hub_activities
+            state: "Chromecast/Netflix"
+          sequence:
+            alias: "Pause chromecast media player"
+            service: media_player.media_pause
+            entity_id: media_player.televisie
