--- a/automations/003 living room/harmony_stop_activity.yaml
+++ b/automations/003 living room/harmony_stop_activity.yaml
@@ -1,17 +1,17 @@
 #################################################################
-## Kill TV when you stop casting for 1 minute
+## Kill TV when you stop casting for 5 minutes
 #################################################################
-- alias         : living_room_harmony_stop_activity
-  id            : 148c250f-48e7-46e4-8e3e-5465fe3a9fb1
+- alias: living_room_harmony_stop_activity
+  id: 148c250f-48e7-46e4-8e3e-5465fe3a9fb1
   trigger:
-    - platform  : state
-      entity_id : media_player.televisie
-      to        : 'off'
-      for       : "00:08:00"
+    - platform: state
+      entity_id: media_player.televisie
+      to: "off"
+      for: "00:05:00"
   condition:
-    - condition : state
-      entity_id : switch.roelofs_harmony_hub_chromecast_netflix
-      state     : 'on'
+    - condition: state
+      entity_id: switch.roelofs_harmony_hub_chromecast_netflix
+      state: "on"
   action:
-    - service   : remote.turn_off
-      entity_id : remote.roelofs_harmony_hub
+    - service: remote.turn_off
+      entity_id: remote.roelofs_harmony_hub
