--- a/automations/003 living room/multimedia_movie_paused.yaml
+++ b/automations/003 living room/multimedia_movie_paused.yaml
@@ -1,17 +1,16 @@
-- alias         : living_room_movie_paused
-  id            : c7c499db-808b-448d-af4c-a4b501056a6b
+- alias: living_room_movie_paused
+  id: c7c499db-808b-448d-af4c-a4b501056a6b
   trigger:
-    - platform  : state
-      entity_id:
-        - media_player.televisie
-      from      : 'playing'
-      for       : "00:00:05"
+    - platform: state
+      entity_id: media_player.televisie
+      from: "playing"
+      for: "00:00:05"
   condition:
-    - condition : time
-      after     : "21:00:00"
-      before    : "02:00:00"
+    - condition: time
+      after: "21:00:00"
+      before: "02:00:00"
   action:
-    - service   : scene.turn_on
+    - service: scene.turn_on
       data:
-        entity_id : scene.living_room_comfort
+        entity_id: scene.living_room_comfort
         transition: 10
