--- a/automations/003 living room/switch_entertainment_outlet.yaml
+++ b/automations/003 living room/switch_entertainment_outlet.yaml
@@ -16,83 +16,61 @@
         - input_select.house
         - binary_sensor.anybody_home
 
-  variables:
-    anchors:
-      - &turn_on
-        - service: switch.turn_on
-          target:
-            entity_id: switch.living_room_entertainment_outlet
-        - wait_for_trigger: # Wait for android set-top box to start up
-            - platform: state
-              entity_id: media_player.android_tv_192_168_1_21
-              to: "idle"
-              for: "00:00:10"
-          timeout: "00:05:00"
-          continue_on_timeout: false
-        - service: media_player.turn_off
-          target:
-            entity_id: media_player.android_tv_192_168_1_21
-
-      - &turn_off
-        - service: remote.turn_off
-          target:
-            entity_id: remote.roelofs_harmony_hub
-        - delay: "00:00:5"
-        - service: switch.turn_off
-          target:
-            entity_id: switch.living_room_entertainment_outlet
-
   action:
     - alias: Check if this is triggered by HA restart
-      choose:
-        - conditions:
-            condition: trigger
-            id: ha_start
-          sequence:
-            - delay:
-                minutes: 1
+      if:
+        condition: trigger
+        id: ha_start
+      then:
+        delay: "00:01:00" # Zigbee plug needs time to connect after HA start
 
+    - alias: Check if entertainment smart plug is currently turned off
+      if:
+        condition: state
+        entity_id: switch.living_room_entertainment_outlet
+        state: "off"
+      then:
+        - alias: Smart plug is turned off, check if we need to switch it on
+          if:
+            - or:
+                - condition: state
+                  entity_id: input_select.house
+                  state: "Normal"
+                - condition: state
+                  entity_id: binary_sensor.anybody_home
+                  state: "on"
+          then:
+            - service: switch.turn_on
+              target:
+                entity_id: switch.living_room_entertainment_outlet
+            - wait_for_trigger: # Wait for android set-top box to start up
+                - platform: state
+                  entity_id: media_player.android_tv_192_168_1_21
+                  to: "idle"
+                  for: "00:00:10"
+              timeout: "00:05:00"
+              continue_on_timeout: false
+            - service: media_player.turn_off
+              target:
+                entity_id: media_player.android_tv_192_168_1_21
 
-    - choose:
-      - conditions:
-          - condition  : state
-            entity_id  : switch.living_room_entertainment_outlet
-            state      : 'off'
-        sequence:
-          - choose:
-            - conditions:
-                - condition  : state
-                  entity_id  : input_select.house
-                  state      : 'Normal'
-              sequence:
-                *turn_on
-
-            - conditions:
-                - condition  : state
-                  entity_id  : binary_sensor.anybody_home
-                  state      : 'on'
-              sequence:
-                *turn_on
-
-      default:
-        - choose:
-          - conditions:
-              - condition  : state
-                entity_id  : input_select.house
-                state      : 'Sleep mode'
-            sequence:
-              *turn_off
-
-          - conditions:
-              - condition  : state
-                entity_id  : input_select.house
-                state      : 'Away mode'
-            sequence:
-              *turn_off
-
-          - conditions:
-              - condition  : state
-                entity_id  : binary_sensor.anybody_home
-                state      : 'off'
-            sequence:
-              *turn_off
+      else:
+        - alias: Smart plug is turned on, check if we need to switch it off
+          if:
+            - or:
+                - condition: state
+                  entity_id: input_select.house
+                  state:
+                    - "Sleep mode"
+                    - "Away mode"
+                - condition: state
+                  entity_id: binary_sensor.anybody_home
+                  state: "off"
+          then:
+            - service: remote.turn_off
+              target:
+                entity_id: remote.roelofs_harmony_hub
+            - delay: "00:00:05"
+            - service: switch.turn_off
+              target:
+                entity_id: switch.living_room_entertainment_outlet
