--- a/automations/003 living room/sunset_lights_on.yaml
+++ b/automations/003 living room/sunset_lights_on.yaml
@@ -1,65 +1,35 @@
 #################################################################
 ## Switch lights when darkness falls
 #################################################################
+- alias: living_room_sunset_lights_on
+  id: 6a4d749f-c854-4e68-9b58-c031fa06cd13
+  trigger:
+    - platform: numeric_state
+      entity_id: sun.sun
+      attribute: elevation
+      below: 3.0 # Can be a positive or negative number
 
-#- alias: living_room_sunset_lights_on
-#  id: 6a4d749f-c854-4e68-9b58-c031fa06cd13
-#  trigger:
-#    - platform: numeric_state
-#      entity_id: sun.sun
-#      attribute: elevation
-#      below: 3.0 # Can be a positive or negative number
-#  action:
-#    - if:
-#        - alias: "If no one is home"
-#          condition: state
-#          entity_id: zone.home
-#          state: 0
-#      then:
-#        - alias: "Then start cleaning already!"
-#          service: light.turn_off
-#          target:
-#            area_id:
-#              - woonkamer
-      
+  variables:
+    areaIds:
+      - woonkamer
+      - eettafel
 
+  action:
+    - service: light.turn_on
+      target:
+        area_id: "{{ areaIds }}"
+      data:
+        transition: 30
 
-#- alias: living_room_sunset_lights_on
-#  id: 6a4d749f-c854-4e68-9b58-c031fa06cd13
-#  trigger:
-#    - platform: numeric_state
-#      entity_id: sun.sun
-#      attribute: elevation
-#      below: 3.0 # Can be a positive or negative number
-#  # Also turn on lights when nobody is home. To scare off burglars.
-#  #  condition:
-#  #    - condition : state
-#  #      entity_id : 'binary_sensor.anybody_home'
-#  #      state     : 'on'
-#  action:
-#    - service: scene.turn_on
-#      data:
-#        entity_id:
-#          - scene.living_room_comfort
-#          - scene.dining_area_comfort
-#        transition: 30
-#    - if:
-#        - alias: "If nobody home"
-#          condition: state
-#          entity_id: zone.home
-#          state: 0
-#      then:
-#        - alias: "Then await delay"
-#          delay: "01:38:11"
-#        - if:
-#          - alias: "If still nobody home, turn off lights"
-#            condition: state
-#            entity_id: zone.home
-#            state: 0
-#          then:
-#            - service: light.turn_off
-#              target:
-#                area_id:
-#                  - woonkamer
-#                  - eettafel
-#
+    - alias: "If nobody is home"
+      if: "{{ states('zone.home') | int(0) == 0 }}"
+      then:
+        - alias: "Wait for anyone to come home"
+          wait_template: "{{ states('zone.home') | int(0) > 0 }}"
+          timeout: "01:38:11"
+        - if: "{{ not wait.completed }}"
+          then:
+            - alias: "Nobody came home, turn off the lights again"
+              service: light.turn_off
+              target:
+                area_id: "{{ areaIds }}"
