bugfix: wrong state name

--- a/automations/002 utility closet/doorbell_alert.yaml
+++ b/automations/002 utility closet/doorbell_alert.yaml
@@ -6,7 +6,9 @@
   trigger:
     platform: state
     entity_id: binary_sensor.deurbel_ringing_sensor
-    to: "on"
+    from: "False"
+    to: "True"
+
   action:
     - service: notify.all
       data:
