--- a/automations/002 utility closet/doorbell_flash_lights.yaml
+++ b/automations/002 utility closet/doorbell_flash_lights.yaml
@@ -6,7 +6,9 @@
   trigger:
     platform: state
     entity_id: binary_sensor.deurbel_ringing_sensor
-    to: "on"
+    from: "False"
+    to: "True"
+
   condition:
     condition: state
     entity_id: input_select.house
