--- a/automations/002 utility closet/doorbell_pauze_tv.yaml
+++ b/automations/002 utility closet/doorbell_pauze_tv.yaml
@@ -6,7 +6,8 @@
   trigger:
     platform: state
     entity_id: binary_sensor.deurbel_ringing_sensor
-    to: "on"
+    from: "False"
+    to: "True"
 
   action:
     - choose:
