--- a/automations/003 living room/sunset_lights_on.yaml
+++ b/automations/003 living room/sunset_lights_on.yaml
@@ -17,7 +17,10 @@
   action:
     - service: light.turn_on
       target:
-        area_id: "{{ areaIds }}"
+        #area_id: "{{ areaIds }}"
+        area_id:
+          - woonkamer
+          - eettafel
       data:
         transition: 30
 
@@ -32,4 +35,7 @@
             - alias: "Nobody came home, turn off the lights again"
               service: light.turn_off
               target:
-                area_id: "{{ areaIds }}"
+                #area_id: "{{ areaIds }}"
+                area_id:
+                  - woonkamer
+                  - eettafel
