--- a/automations/002 utility closet/doorbell_flash_lights.yaml
+++ b/automations/002 utility closet/doorbell_flash_lights.yaml
@@ -17,6 +17,14 @@
       - "Guest mode"
       - "Cleaning mode"
   action:
+    - service: scene.create
+      data:
+        scene_id: flash_lights_restore_scene
+        snapshot_entities:
+          - light.first_floor_landing_ceiling
+          - light.second_floor_landing_ceiling
+          - light.home_office_ceiling
+
     - service: light.turn_on
       target:
         entity_id:
@@ -26,3 +34,9 @@
       data:
         brightness: 255
         flash: long
+
+    - delay: "00:00:30"
+
+    - service: scene.turn_on
+      target:
+        entity_id: scene.flash_lights_restore_scene
