--- a/automations/400 general/house_mode_away_enable.yaml
+++ b/automations/400 general/house_mode_away_enable.yaml
@@ -2,36 +2,18 @@
   id: d90a6a6a-9ab9-4fbf-bbaf-e284276afb52
 
   trigger:
-    - platform: state
-      entity_id:
-        - person.stefan
-        - person.marcella
-        - person.dija
-        - person.ria
-        - person.jos
-      from: "home"
+    - platform: numeric_state
+      entity_id: zone.home
+      below: 1
       for:
-        minutes: 1
+        seconds: 30
 
   condition:
-    - alias: "ALL persons are NOT home"
-      condition: not
+    - condition: not
       conditions:
         - condition: state
-          entity_id: person.stefan
-          state: "home"
-        - condition: state
-          entity_id: person.marcella
-          state: "home"
-        - condition: state
-          entity_id: person.dija
-          state: "home"
-        - condition: state
-          entity_id: person.ria
-          state: "home"
-        - condition: state
-          entity_id: person.jos
-          state: "home"
+          entity_id: input_select.house
+          state: "Guest mode"
 
   action:
     - service: input_select.select_option
