Add API encryption to espHome Add Friendly name and remove all Name prefixes

--- a/esphome/common/common.yaml
+++ b/esphome/common/common.yaml
@@ -27,6 +27,8 @@ logger:
 # https://esphome.io/components/api.html
 api:
   id: component_api
+  encryption:
+    key: ${api_encryption_key}
 
 # Enable OTA (Over The Air) update component
 # https://esphome.io/components/ota.html
