--- a/esphome/common/text_sensors/wifi_info.yaml
+++ b/esphome/common/text_sensors/wifi_info.yaml
@@ -2,8 +2,8 @@
 # https://esphome.io/components/text_sensor/wifi_info.html
 platform: wifi_info
 ip_address:
-  name: "${name} IP Address"
+  name: IP Address
 ssid:
-  name: "${name} SSID"
+  name: SSID
 bssid:
-  name: "${name} BSSID"
+  name: BSSID
