--- a/esphome/common/binary_sensors/status.yaml
+++ b/esphome/common/binary_sensors/status.yaml
@@ -1,4 +1,4 @@
 # The Status Binary Sensor exposes the node state (if it’s connected to via MQTT/native API) for Home Assistant.
 # https://esphome.io/components/binary_sensor/status.html
 platform: status
-name: "${name} Status"
+name: Status
