--- a/esphome/common/sensors/shtcx.yaml
+++ b/esphome/common/sensors/shtcx.yaml
@@ -4,8 +4,8 @@
 platform: shtcx
 temperature:
   id: sensor_temperature
-  name: "${name} Temperature"
+  name: Temperature
 humidity:
   id: sensor_humidity
-  name: "${name} Humidity"
+  name: Humidity
 update_interval: 600s
