--- a/esphome/common/sensors/wifi_signal_percentage.yaml
+++ b/esphome/common/sensors/wifi_signal_percentage.yaml
@@ -3,7 +3,7 @@
 
 platform: template
 id: sensor_wifi_signal_percentage
-name: "${name} WiFi Signal %"
+name: WiFi Signal %
 icon: "mdi:wifi"
 unit_of_measurement: "%"
 entity_category: diagnostic
