--- a/esphome/common/text_sensors/version.yaml
+++ b/esphome/common/text_sensors/version.yaml
@@ -2,4 +2,4 @@
 # https://esphome.io/components/text_sensor/version.html
 platform: version
 id: text_sensor_version
-name: "${name} Version"
+name: Version
