--- a/esphome/powerplug-1.yaml
+++ b/esphome/powerplug-1.yaml
@@ -4,7 +4,8 @@ substitutions:
   description: "Blitzwolf BW-SHP6. Floorheatingpump outlet"
   current_res: "0.00290" # Higher value gives lower watt readout
   voltage_div: "940" # Lower value gives lower voltage readout
-  ip_address: !secret ip_address_powerplug1
+  ip_address: !secret powerplug1_ip_address
+  api_encryption_key: !secret powerplug1_api_encryption_key
   max_power: "2000" # 2300W for 10A
 
 packages:
