--- a/automations/400 general/turn_off_all_lights.yaml
+++ b/automations/400 general/turn_off_all_lights.yaml
@@ -13,7 +13,7 @@
       - light.inside # christmas light string in front kitchen window
       - light.outside # christmas light string in garden trees
       - light.christmaslights_in_front
-      - light.oprit_verlichting_light
+      - light.oprit_verlichting_licht
       - media_player.spotify_stefanroelofs
 
   action:
